utilities/Sol/modules/grammars/language/src/test/resources/cocos/valid/UniqueIdentifier.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package valid

language UniqueIdentifier extends UniqueIdentifierParent {
    template undeclareExisting2 {
        path "SomePath"
        label "Some Label"

        option someOption: String {
            label "Some Option"
        }
    }
}
